--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #fff4e1;
+  background: theme("colors.amber.50");
 
   @apply text-base;
 
@@ -21,15 +21,21 @@ body {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+
+    @apply bg-neutral-900;
   }
   body {
-    color: white;
-    background: black;
+    @apply text-amber-100;
+    @apply bg-neutral-900;
   }
 }
 
 a {
-  color: #165cff;
+  @apply text-blue-600;
+
+  @media (prefers-color-scheme: dark) {
+    @apply text-blue-300;
+  }
 
   &:hover {
     @apply underline;
@@ -42,7 +48,6 @@ p {
 
 h1 {
   @apply font-bold;
-  @apply leading-normal;
   @apply pt-4;
   @apply pb-2;
 
